--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Philipp Rumpf
 Jeff Garzik <jgarzik@pobox.com>
 Henrique de Moraes Holschuh <hmh@debian.org>
+Rafael Sevilla <dido.sevilla@stormwyrm.com>
